--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,8 @@ jobs:
           cd ..
           cp -r submodule/utils/vim/ .
           git add .
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
           git commit -a -m "Update"
           echo test, and deploy your project.
       - name: Push changes
